<resources>
    <string name="app_name">BrainTrain</string>

    <!-- Main buttons -->
    <string name="resume_game">Resume Game</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="save_game">Save Game</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="about">About</string>

    <string name="undo">Undo</string>
    <string name="next">Next</string>

    <string name="reverse">Reverse</string>
    <string name="reverse_flip">Reverse flip</string>
    <string name="random">Random</string>

    <string name="difficulty">Choose difficulty:</string>
    <string name="variant">Choose variant:</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>

    <!-- This texts are explaining options in correspondent game modes -->
    <string name="easy_text">Easy</string>
    <string name="normal_text">Normal</string>

    <string name="about_text">Verbose about</string>

</resources>
