<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.github.coolrunner86.braintrain.VariantsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/variant"
        android:padding="16dp"
        android:textSize="20dp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/normal"
        android:id="@+id/normalVariantBtn"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reverse"
        android:id="@+id/reverseVariantBtn"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reverse_flip"
        android:id="@+id/reverseFlipVariantBtn"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/random"
        android:id="@+id/randomVariantBtn"/>

</LinearLayout>
